--- a/notebooks/main_notebooks/pairs_formation/finance_pairs_formation/1_finance_pairs_formation_period_1st.ipynb
+++ b/notebooks/main_notebooks/pairs_formation/finance_pairs_formation/1_finance_pairs_formation_period_1st.ipynb
@@ -50,7 +50,7 @@
     "# locate the folder which stores the custom package using relative path\n",
     "sys.path.append('../../../../src')\n",
     "\n",
-    "import config_snippets as conf_snp\n",
+    "import config_snippets as config_snp\n",
     "import splitting_data as splitting_data\n",
     "import gatev_distance_method as gatev_dist\n",
     "import data_transformation_snippets as data_transform_snp\n",
@@ -70,7 +70,7 @@
     "config_file_path = \"..//..//config.yaml\"\n",
     "\n",
     "# Load the configuration\n",
-    "config = conf_snp.load_config(config_file_path)\n",
+    "config = config_snp.load_config(config_file_path)\n",
     "\n",
     "if config is not None:\n",
     "    import ast\n",
