--- a/notebooks/main_notebooks/pairs_formation/finance_pairs_formation/finance/1_finance_pairs_formation_period_1st.ipynb
+++ b/notebooks/main_notebooks/pairs_formation/finance_pairs_formation/finance/1_finance_pairs_formation_period_1st.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import sys\n",
     "# locate the folder which stores the custom package using relative path\n",
-    "sys.path.append('../../../../src')\n",
+    "sys.path.append('../../../../../src')\n",
     "\n",
     "import config_snippets as config_snp\n",
     "import splitting_data as splitting_data\n",
@@ -57,7 +57,8 @@
     "import time_series_analysis_snippets as tsa_snp\n",
     "import engle_granger_cointegration_method as eg_coint\n",
     "import johansen_cointegration_method as jj_coint \n",
-    "import handling_dataframe as hdf"
+    "import handling_dataframe as hdf\n",
+    "import handling_datetime as hdt\n"
    ]
   },
   {
@@ -67,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Path to your config YAML file\n",
-    "config_file_path = \"..//..//config.yaml\"\n",
+    "config_file_path = \"..//..//../config.yaml\"\n",
     "\n",
     "# Load the configuration\n",
     "config = config_snp.load_config(config_file_path)\n",
@@ -80,6 +81,9 @@
     "    # Access and convert string to tuple\n",
     "    train_period = ast.literal_eval(config.get(\"train_period\"))\n",
     "    test_period = ast.literal_eval(config.get(\"test_period\"))\n",
+    "    \n",
+    "    # Get list of df_finance data paths\n",
+    "    lst_df_finance_paths = ast.literal_eval(config.get(\"paths_df_finance_processed\"))\n",
     "    "
    ]
   },
@@ -89,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import data\n",
-    "path = \"..//..//..//..//data//processed//finance//df_finance_processed_first_period_18102023.csv\"\n",
-    "df_finance_first_period = pd.read_csv(path)"
+    "# Import data \n",
+    "path = lst_df_finance_paths[0]\n",
+    "df = pd.read_csv(path)"
    ]
   },
   {
@@ -101,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Set date as index\n",
-    "df_finance_first_period.set_index(\"date\", inplace=True)"
+    "df.set_index(\"date\", inplace=True)"
    ]
   },
   {
@@ -342,7 +346,16 @@
     }
    ],
    "source": [
-    "df_finance_first_period"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
    ]
   },
   {
@@ -354,27 +367,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example: split ratio = 0.7\n",
-    "df_finance_train_first_period, df_finance_test_first_period = splitting_data.splitting_data_by_ratio(\n",
-    "    df_finance_first_period,\n",
+    "df_train, df_test = splitting_data.splitting_data_by_ratio(\n",
+    "    df,\n",
     "    split_ratio=split_ratio\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example of splitting by specified period\n",
     "\n",
     "# test_train, test_test = splitting_data_by_date(\n",
-    "#     df_finance_first_period,\n",
+    "#     df,\n",
     "#     train_period = train_period,\n",
     "#     test_period = test_period\n",
     "# )"
@@ -389,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -619,13 +632,13 @@
        "[287 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_finance_train_first_period"
+    "df_train"
    ]
   },
   {
@@ -637,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -7434,12 +7447,12 @@
     }
    ],
    "source": [
-    "df_finance_cum_daily_returns_train_first_period = gatev_dist.gatev_data_normalize(df_finance_train_first_period)"
+    "df_cum_daily_returns_train = gatev_dist.gatev_data_normalize(df_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -7669,13 +7682,13 @@
        "[286 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_finance_cum_daily_returns_train_first_period"
+    "df_cum_daily_returns_train"
    ]
   },
   {
@@ -7687,7 +7700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -8752,24 +8765,24 @@
     }
    ],
    "source": [
-    "gatev_dist.gatev_distance_matrix(df_finance_cum_daily_returns_train_first_period)"
+    "gatev_dist.gatev_distance_matrix(df_cum_daily_returns_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "gatev_pairs, list_result_smallest_dist = gatev_dist.gatev_distance_smallest(\n",
-    "    df=df_finance_cum_daily_returns_train_first_period,\n",
+    "    df=df_cum_daily_returns_train,\n",
     "    top_values=10\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -8799,7 +8812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -8817,7 +8830,7 @@
        " ['adClose_VND', 'adClose_VPB']]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8842,7 +8855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -8948,17 +8961,7 @@
    ],
    "source": [
     "# Visualize distribution of values of each stock\n",
-    "data_transform_snp.dist_stock_visualization(df_finance_train_first_period)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Take natural log transformation of the data  \n",
-    "df_finance_train_transformed_first_period = data_transform_snp.df_natural_log_transformed(df_finance_train_first_period)"
+    "data_transform_snp.dist_stock_visualization(df_train)"
    ]
   },
   {
@@ -8967,8 +8970,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Take natural log transformation of the data  \n",
+    "df_train_transformed = data_transform_snp.df_natural_log_transformed(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Visualize distribution of transformed values of each stock\n",
-    "data_transform_snp.dist_stock_visualization(df_finance_train_transformed_first_period)"
+    "data_transform_snp.dist_stock_visualization(df_train_transformed)"
    ]
   },
   {
@@ -8980,7 +8993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -9077,13 +9090,13 @@
        "9  adClose_VPB                  1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tsa_snp.find_integration_order(df_finance_train_transformed_first_period)"
+    "tsa_snp.find_integration_order(df_train_transformed)"
    ]
   },
   {
@@ -9095,7 +9108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -9210,12 +9223,12 @@
     }
    ],
    "source": [
-    "score_matrix, pvalue_matrix, eg_pairs = eg_coint.find_cointegrated_pairs(df_finance_train_transformed_first_period)"
+    "score_matrix, pvalue_matrix, eg_pairs = eg_coint.find_cointegrated_pairs(df_train_transformed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -9228,7 +9241,7 @@
        " ['adClose_STB', 'adClose_VND']]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9239,7 +9252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -9254,12 +9267,12 @@
     }
    ],
    "source": [
-    "scores_swap, pvalues_swap, eg_pairs_swap = eg_coint.find_cointegrated_pairs_swap(df_finance_train_transformed_first_period)"
+    "scores_swap, pvalues_swap, eg_pairs_swap = eg_coint.find_cointegrated_pairs_swap(df_train_transformed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -9274,7 +9287,7 @@
        " ['adClose_STB', 'adClose_VND']]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9292,16 +9305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "johansen_pairs = jj_coint.johansen_test(df_finance_train_transformed_first_period)"
+    "johansen_pairs = jj_coint.johansen_test(df_train_transformed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -9322,7 +9335,7 @@
        " ['adClose_STB', 'adClose_VND']]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9340,22 +9353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\ACADEMIC LIFE\\EDU\\RESEARCH\\CURRENT\\PAIR TRADING UPGRADE\\PAIR TRADING UPGRADE REPO\\notebooks\\main_notebooks\\pairs_formation\\finance_pairs_formation\\../../../../src\\handling_dataframe.py:164: FutureWarning:\n",
-      "\n",
-      "The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_finance_pairs_formation_train_first_period = hdf.pairs_formation_result_summary(\n",
+    "df_pairs_formation_train = hdf.pairs_formation_result_summary(\n",
     "    gatev_pairs,\n",
     "    eg_pairs,\n",
     "    eg_pairs_swap,\n",
@@ -9365,7 +9367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -9625,13 +9627,24 @@
        "17                     1  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_finance_pairs_formation_train_first_period"
+    "df_pairs_formation_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pairs_formation_train.to_csv(\n",
+    "    f\"..//..//..//..//..//results//pairs_formation//finance//finance_pairs_formation_first_period_{hdt.today_date_to_digits()}.csv\"\n",
+    "    )"
    ]
   }
  ],
