--- a/notebooks/main_notebooks/pairs_formation/consumer_good_pairs_formation/consumer_good/2_consumer_good_pairs_formation_period_2nd.ipynb
+++ b/notebooks/main_notebooks/pairs_formation/consumer_good_pairs_formation/consumer_good/2_consumer_good_pairs_formation_period_2nd.ipynb
@@ -79,8 +79,8 @@
     "    split_ratio = config.get(\"split_ratio\")\n",
     "    \n",
     "    # Access and convert string to tuple\n",
-    "    train_period = ast.literal_eval(config.get(\"train_period\"))\n",
-    "    test_period = ast.literal_eval(config.get(\"test_period\"))\n",
+    "    # train_period = ast.literal_eval(config.get(\"train_period\"))\n",
+    "    # test_period = ast.literal_eval(config.get(\"test_period\"))\n",
     "    \n",
     "    # Get list of df_consumer_good data paths\n",
     "    lst_df_consumer_good_paths = ast.literal_eval(config.get(\"paths_df_consumer_good_processed\"))\n",
@@ -11259,6 +11259,257 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adClose_DBC</th>\n",
+       "      <th>adClose_DLG</th>\n",
+       "      <th>adClose_HHS</th>\n",
+       "      <th>adClose_HNG</th>\n",
+       "      <th>adClose_IDI</th>\n",
+       "      <th>adClose_SBT</th>\n",
+       "      <th>adClose_TNG</th>\n",
+       "      <th>adClose_TSC</th>\n",
+       "      <th>adClose_TTF</th>\n",
+       "      <th>adClose_VNM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-04-13</th>\n",
+       "      <td>2.188408</td>\n",
+       "      <td>0.431782</td>\n",
+       "      <td>0.904623</td>\n",
+       "      <td>2.541602</td>\n",
+       "      <td>1.207766</td>\n",
+       "      <td>2.444085</td>\n",
+       "      <td>2.002155</td>\n",
+       "      <td>0.677526</td>\n",
+       "      <td>0.741937</td>\n",
+       "      <td>4.246021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-14</th>\n",
+       "      <td>2.237300</td>\n",
+       "      <td>0.431782</td>\n",
+       "      <td>0.898941</td>\n",
+       "      <td>2.537657</td>\n",
+       "      <td>1.274804</td>\n",
+       "      <td>2.454705</td>\n",
+       "      <td>2.093344</td>\n",
+       "      <td>0.630740</td>\n",
+       "      <td>0.765468</td>\n",
+       "      <td>4.245018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-15</th>\n",
+       "      <td>2.296064</td>\n",
+       "      <td>0.488580</td>\n",
+       "      <td>0.964319</td>\n",
+       "      <td>2.549445</td>\n",
+       "      <td>1.290334</td>\n",
+       "      <td>2.454705</td>\n",
+       "      <td>2.162403</td>\n",
+       "      <td>0.654406</td>\n",
+       "      <td>0.770108</td>\n",
+       "      <td>4.247037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-16</th>\n",
+       "      <td>2.363210</td>\n",
+       "      <td>0.476234</td>\n",
+       "      <td>0.986936</td>\n",
+       "      <td>2.545531</td>\n",
+       "      <td>1.253905</td>\n",
+       "      <td>2.458220</td>\n",
+       "      <td>2.140066</td>\n",
+       "      <td>0.659073</td>\n",
+       "      <td>0.770108</td>\n",
+       "      <td>4.248038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-17</th>\n",
+       "      <td>2.429658</td>\n",
+       "      <td>0.470004</td>\n",
+       "      <td>1.042042</td>\n",
+       "      <td>2.545531</td>\n",
+       "      <td>1.282599</td>\n",
+       "      <td>2.502992</td>\n",
+       "      <td>2.124773</td>\n",
+       "      <td>0.726098</td>\n",
+       "      <td>0.765468</td>\n",
+       "      <td>4.248038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-20</th>\n",
+       "      <td>3.106379</td>\n",
+       "      <td>1.064711</td>\n",
+       "      <td>1.668084</td>\n",
+       "      <td>2.360854</td>\n",
+       "      <td>1.701652</td>\n",
+       "      <td>2.797098</td>\n",
+       "      <td>2.666116</td>\n",
+       "      <td>2.608083</td>\n",
+       "      <td>1.876407</td>\n",
+       "      <td>4.347448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-21</th>\n",
+       "      <td>3.137753</td>\n",
+       "      <td>1.071584</td>\n",
+       "      <td>1.669780</td>\n",
+       "      <td>2.356126</td>\n",
+       "      <td>1.767296</td>\n",
+       "      <td>2.827728</td>\n",
+       "      <td>2.686282</td>\n",
+       "      <td>2.608083</td>\n",
+       "      <td>1.913977</td>\n",
+       "      <td>4.360982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-22</th>\n",
+       "      <td>3.137753</td>\n",
+       "      <td>1.071584</td>\n",
+       "      <td>1.669780</td>\n",
+       "      <td>2.356126</td>\n",
+       "      <td>1.767296</td>\n",
+       "      <td>2.827728</td>\n",
+       "      <td>2.686282</td>\n",
+       "      <td>2.608083</td>\n",
+       "      <td>1.913977</td>\n",
+       "      <td>4.360982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-23</th>\n",
+       "      <td>3.137753</td>\n",
+       "      <td>1.071584</td>\n",
+       "      <td>1.669780</td>\n",
+       "      <td>2.356126</td>\n",
+       "      <td>1.767296</td>\n",
+       "      <td>2.827728</td>\n",
+       "      <td>2.686282</td>\n",
+       "      <td>2.608083</td>\n",
+       "      <td>1.913977</td>\n",
+       "      <td>4.360982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-24</th>\n",
+       "      <td>3.153932</td>\n",
+       "      <td>1.068153</td>\n",
+       "      <td>1.686029</td>\n",
+       "      <td>2.360854</td>\n",
+       "      <td>1.800058</td>\n",
+       "      <td>2.830150</td>\n",
+       "      <td>2.701160</td>\n",
+       "      <td>2.647096</td>\n",
+       "      <td>1.918392</td>\n",
+       "      <td>4.383163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>407 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            adClose_DBC  adClose_DLG  adClose_HHS  adClose_HNG  adClose_IDI  \\\n",
+       "date                                                                          \n",
+       "2020-04-13     2.188408     0.431782     0.904623     2.541602     1.207766   \n",
+       "2020-04-14     2.237300     0.431782     0.898941     2.537657     1.274804   \n",
+       "2020-04-15     2.296064     0.488580     0.964319     2.549445     1.290334   \n",
+       "2020-04-16     2.363210     0.476234     0.986936     2.545531     1.253905   \n",
+       "2020-04-17     2.429658     0.470004     1.042042     2.545531     1.282599   \n",
+       "...                 ...          ...          ...          ...          ...   \n",
+       "2021-05-20     3.106379     1.064711     1.668084     2.360854     1.701652   \n",
+       "2021-05-21     3.137753     1.071584     1.669780     2.356126     1.767296   \n",
+       "2021-05-22     3.137753     1.071584     1.669780     2.356126     1.767296   \n",
+       "2021-05-23     3.137753     1.071584     1.669780     2.356126     1.767296   \n",
+       "2021-05-24     3.153932     1.068153     1.686029     2.360854     1.800058   \n",
+       "\n",
+       "            adClose_SBT  adClose_TNG  adClose_TSC  adClose_TTF  adClose_VNM  \n",
+       "date                                                                         \n",
+       "2020-04-13     2.444085     2.002155     0.677526     0.741937     4.246021  \n",
+       "2020-04-14     2.454705     2.093344     0.630740     0.765468     4.245018  \n",
+       "2020-04-15     2.454705     2.162403     0.654406     0.770108     4.247037  \n",
+       "2020-04-16     2.458220     2.140066     0.659073     0.770108     4.248038  \n",
+       "2020-04-17     2.502992     2.124773     0.726098     0.765468     4.248038  \n",
+       "...                 ...          ...          ...          ...          ...  \n",
+       "2021-05-20     2.797098     2.666116     2.608083     1.876407     4.347448  \n",
+       "2021-05-21     2.827728     2.686282     2.608083     1.913977     4.360982  \n",
+       "2021-05-22     2.827728     2.686282     2.608083     1.913977     4.360982  \n",
+       "2021-05-23     2.827728     2.686282     2.608083     1.913977     4.360982  \n",
+       "2021-05-24     2.830150     2.701160     2.647096     1.918392     4.383163  \n",
+       "\n",
+       "[407 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Only use time series that have order of integration is 1 \n",
+    "df_order_of_integration_ts = tsa_snp.find_integration_order(df_train_transformed)\n",
+    "lst_non_stationary_ts = df_order_of_integration_ts[\n",
+    "    df_order_of_integration_ts['Integration Order'] == 1\n",
+    "]['Column Name'].tolist()\n",
+    "\n",
+    "# Keep those stocks which have order of integration is 1 \n",
+    "df_train_transformed = df_train_transformed[lst_non_stationary_ts]\n",
+    "\n",
+    "# Print df\n",
+    "df_train_transformed"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11267,7 +11518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -11401,7 +11652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -11410,7 +11661,7 @@
        "[]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11421,7 +11672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11430,7 +11681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -11439,7 +11690,7 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11457,7 +11708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11466,7 +11717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -11484,7 +11735,7 @@
        " ['adClose_TSC', 'adClose_VNM']]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11502,7 +11753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11516,7 +11767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -11736,7 +11987,7 @@
        "19  adClose_TSC  adClose_VNM              x                  1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11747,7 +11998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
